--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Wenxiao Zhao"
-  avatar           : "images/wenxiao_profile.png"
+  avatar           : "images/wenxiao_profile.JPG"
   bio              : "UCLA"
   location         : "Los Angeles, USA"
   employer         :
