--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Wenxiao Zhao"
 description              : ""
-repository               : "wenxiao7.github.io"
+repository               : "wenxiao7/wenxiao7.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
